--- a/Neutral Model Analysis/procedure/GCMP_Caribbean_Analysis_Aus_2018.Rmd
+++ b/Neutral Model Analysis/procedure/GCMP_Caribbean_Analysis_Aus_2018.Rmd
@@ -135,18 +135,18 @@ table(tax_table(coral)[,"Kingdom"])
 coral.rarefied = rarefy_even_depth(coral, rngseed=111, sample.size=1000, replace=F, trimOTUs = TRUE)
 coral.rarefied
 ##Agglomerate taxa to family 
-glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 444 Samples 
+#glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 444 Samples 
 
 
 
-phyloseq::otu_table(coral.rarefied)%>%
+#phyloseq::otu_table(coral.rarefied)%>%
         as.data.frame() %>%
         rownames_to_column("id") %>%
         left_join(phyloseq::tax_table(coral.rarefied) %>%
         as.data.frame() %>%
         rownames_to_column("id")) -> coral_biom
         
-write.csv(coral_biom, file ="GCMP24_rarefied_coral.csv")
+#write.csv(coral_biom, file ="GCMP24_rarefied_coral.csv")
 
 
 ```
