Fixed filename inputs

--- a/Analysis/Benfords_Law_Analysis/procedure/benfords_law.ipynb
+++ b/Analysis/Benfords_Law_Analysis/procedure/benfords_law.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "6a45c272",
    "metadata": {},
    "outputs": [],
@@ -154,13 +154,13 @@
     "    #Make an output filepath by combining output dir, base_filename and suffix\n",
     "    output_filepath = join(output_dir,f\"{base_filename}{suffix}\")\n",
     "\n",
-    "    print(f\"Output filepath: {output_filename}\")\n",
+    "    print(f\"Output filepath: {output_filepath}\")\n",
     "    return output_filepath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "d348765a",
    "metadata": {},
    "outputs": [
@@ -188,19 +188,18 @@
       "[48 20 21 15 15 12 11 11  3] [46.96067932358107, 27.470236412686273, 19.49044291089479, 15.117962029256802, 12.35227438342947, 10.443699182375662, 9.04674372851913, 7.979793501791481, 7.138168527465322]\n",
       "Generating output filepath for input path: ../input/mucus_feature_table.qza\n",
       "Base filename: mucus_feature_table\n",
-      "Output filepath: ../output/tissue_feature_table_benfords_law_results.csv\n",
-      "Index(['chi2_stat', 'p_value'], dtype='object')\n",
-      "Chi-squared (mean): 0.16402793212746347\n",
-      "p-value (mean): 0.9999879912985825\n",
+      "Output filepath: ../output/mucus_feature_table_benfords_law_results.csv\n",
+      "Chi-squared (mean): 11.844832900700224\n",
+      "p-value (mean): 0.3677681684735881\n",
       "       chi2_stat    p_value\n",
-      "count  83.000000  83.000000\n",
-      "mean    0.164028   0.999988\n",
-      "std     0.115754   0.000043\n",
-      "min     0.009207   0.999659\n",
-      "25%     0.078900   0.999996\n",
-      "50%     0.138221   0.999999\n",
-      "75%     0.205574   1.000000\n",
-      "max     0.641190   1.000000\n",
+      "count  15.000000  15.000000\n",
+      "mean   11.844833   0.367768\n",
+      "std     8.089078   0.317393\n",
+      "min     1.399511   0.000496\n",
+      "25%     7.066636   0.057997\n",
+      "50%     8.133050   0.420583\n",
+      "75%    15.059736   0.529530\n",
+      "max    27.888107   0.994253\n",
       "Fitting Benford's law to tissue microbiomes!\n",
       "about to load the feature table: ../input/tissue_feature_table.qza\n",
       "Loaded feature table with id: 31c5413f-a048-4e8b-bfe5-392d0e373d35\n",
@@ -216,19 +215,18 @@
       "[31 21 26 16 18 11  9  8 14] [46.358619332253106, 27.11805389457491, 19.24056543767819, 14.92414200324069, 12.193911891334222, 10.309805603114436, 8.930759834563757, 7.877488456896719, 7.046653546343972]\n",
       "Generating output filepath for input path: ../input/tissue_feature_table.qza\n",
       "Base filename: tissue_feature_table\n",
-      "Output filepath: ../output/mucus_feature_table_benfords_law_results.csv\n",
-      "Index(['chi2_stat', 'p_value'], dtype='object')\n",
-      "Chi-squared (mean): 0.16402793212746347\n",
-      "p-value (mean): 0.9999879912985825\n",
+      "Output filepath: ../output/tissue_feature_table_benfords_law_results.csv\n",
+      "Chi-squared (mean): 11.240257003116653\n",
+      "p-value (mean): 0.3201475938313703\n",
       "       chi2_stat    p_value\n",
-      "count  83.000000  83.000000\n",
-      "mean    0.164028   0.999988\n",
-      "std     0.115754   0.000043\n",
-      "min     0.009207   0.999659\n",
-      "25%     0.078900   0.999996\n",
-      "50%     0.138221   0.999999\n",
-      "75%     0.205574   1.000000\n",
-      "max     0.641190   1.000000\n",
+      "count  10.000000  10.000000\n",
+      "mean   11.240257   0.320148\n",
+      "std     6.171789   0.197286\n",
+      "min     6.577788   0.001092\n",
+      "25%     7.823043   0.240985\n",
+      "50%     8.788960   0.360438\n",
+      "75%    10.358955   0.452496\n",
+      "max    25.900208   0.582793\n",
       "Fitting Benford's law to skeleton microbiomes!\n",
       "about to load the feature table: ../input/skeleton_feature_table.qza\n",
       "Loaded feature table with id: 2035541a-da05-48da-b39e-3c5899ccd291\n",
@@ -243,19 +241,18 @@
       "[31 16 12  6  9  7  6  2  2] [27.39372960542229, 16.024304574066992, 11.369425031355293, 8.818811183733134, 7.205493390333858, 6.092157856385803, 5.277267174969492, 4.654879542711697, 4.163931641021438]\n",
       "Generating output filepath for input path: ../input/skeleton_feature_table.qza\n",
       "Base filename: skeleton_feature_table\n",
-      "Output filepath: ../output/tissue_feature_table_benfords_law_results.csv\n",
-      "Index(['chi2_stat', 'p_value'], dtype='object')\n",
-      "Chi-squared (mean): 0.16402793212746347\n",
-      "p-value (mean): 0.9999879912985825\n",
-      "       chi2_stat    p_value\n",
-      "count  83.000000  83.000000\n",
-      "mean    0.164028   0.999988\n",
-      "std     0.115754   0.000043\n",
-      "min     0.009207   0.999659\n",
-      "25%     0.078900   0.999996\n",
-      "50%     0.138221   0.999999\n",
-      "75%     0.205574   1.000000\n",
-      "max     0.641190   1.000000\n"
+      "Output filepath: ../output/skeleton_feature_table_benfords_law_results.csv\n",
+      "Chi-squared (mean): 8.088852255124246\n",
+      "p-value (mean): 0.47066968858654273\n",
+      "       chi2_stat   p_value\n",
+      "count   9.000000  9.000000\n",
+      "mean    8.088852  0.470670\n",
+      "std     3.039840  0.238014\n",
+      "min     4.730691  0.075156\n",
+      "25%     6.349460  0.390530\n",
+      "50%     7.520150  0.481687\n",
+      "75%     8.452840  0.608149\n",
+      "max    14.263268  0.785934\n"
      ]
     }
    ],
@@ -266,17 +263,24 @@
     "for compartment in [\"mucus\",\"tissue\",\"skeleton\"]:\n",
     "    print(f\"Fitting Benford's law to {compartment} microbiomes!\")\n",
     "    input_feature_table_path = join(input_dir,f\"{compartment}_feature_table.qza\")\n",
-    "    apply_benfords_law_to_table(input_feature_table_path,axis=\"sample\")\n",
+    "    summary_df = apply_benfords_law_to_table(input_feature_table_path,axis=\"sample\")\n",
     "    output_dir = \"../output\"\n",
     "    suffix = \"_benfords_law_results.csv\"\n",
-    "\n",
     "    output_filename = get_output_filepath(input_feature_table_path,output_dir,suffix)\n",
-    "    print(summary_df.columns)\n",
+    "    \n",
     "    print(\"Chi-squared (mean):\",summary_df['chi2_stat'].mean())\n",
     "    print(\"p-value (mean):\",summary_df['p_value'].mean())\n",
     "    print(summary_df.describe())\n",
     "    summary_df.to_csv(output_filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d511837a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
